Pull request #794: AG-52501 Fix hover for the right side of menu item
Merge in SCITER/adguard-mini from AG-52501 to master

Squashed commit of the following:

commit c8312feda9c5541236fd27f42fbe1f7a183a0d1b
Merge: 1505541b 107c8a75
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Thu Apr 2 16:05:49 2026 +0300

    Merge remote-tracking branch 'remotes/origin/master' into AG-52501

commit 1505541bfa063ed71ab84d08bf1503729ac390a3
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Tue Mar 31 16:03:16 2026 +0300

    AG-52501 Fix hover for the right side of menu item

--- a/AdguardMini/sciter-ui/modules/settings/components/SettingsItem/SettingsItem.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/SettingsItem/SettingsItem.module.pcss
@@ -19,17 +19,13 @@
     &__hover {
         &:hover {
             border-radius: 8px;
-            background: var(--fills-buttons-secondary-button-hovered);
-        }
-
-        &:hover + .SettingsItem_container_routeBorder {
-            background: transparent;
+            background: var(--fills-backgrounds-page-background-hovered);
         }
     }
 
     &_defaultHovered {
         border-radius: 8px;
-        background: var(--fills-buttons-secondary-button-hovered);
+        background: var(--fills-backgrounds-page-background-hovered);
     }
 
     &_title {
@@ -45,9 +41,9 @@
         }
 
         &_routeBorder {
-            height: 43px;
+            height: *;
             width: 1px;
-            margin-top: 16px;
+            margin: 16px 1px;
             background: var(--stroke-dividers-item-divider-default);
         }
 
@@ -114,7 +110,7 @@
         }
 
         &_children {
-            margin-left: auto;
+            height: *;
         }
 
         &__withRoute {
